--- a/_posts/2022-06-16-diary.md
+++ b/_posts/2022-06-16-diary.md
@@ -6,7 +6,7 @@ tags: diary
 
 1. 6월의 일기 start, 요즘 무언가 내 생각을 많이 못 꺼내놓았고, 이상한 곳에서 이상한 나의 말을 하면서 많은 것을 깨닳았던 한달이다.
 
-2. 어제 1080 파트 나름 젊은이들끼리 술을 먹었다. 굳이 분위기를 띄운다고 내가 굳이 하지 않아도 되는 일을 만들어서 한 것을 아닌지라는 생각을 하게 되었다. 무엇보다 약속을 지키기 위해서 차를 빌려서 업무 시간에 다녀왔는데, 그건 정말 정신나간 생각이었고, 만약 그런 일이 발생했다고 하더라도 나는 전혀 아쉬운 스탠스를 취하면 안되는구나를 생각하게 되었다. 돌이켜서 생각해보면 차를 빌린 금액이랑 술 값까지 모두 생각하게 되면 10만원을 훌쩍 쓰게 된 것인데 그러한 값어치를 할만큼 건덕지가 있는 모임도 아니었거니와 도리어 툭툭 치는 사람이랑 술을 먹으면서 앞으로는 그 사람이 끼면 다시는 술을 안먹겠다고 다짐을 하게 되었다. 요즘 다시 어떠한 자리를 만들어야한다는 강박관념 때문에 자리를 만들고 참여하고 있는데, 그러한 것이 다시금 회기하여서 나를 불안하고 우울하게 만드는 것은 아닌가라는 생각을 하게 되었다. 매번 나오는 소리라든가 다른 목소리를 들으면서 위축되는 내 자신의 그러한 곳에 굳이 던질 필요조차 없다는 생각을 하게 되었고, 정말 행복하지 않으면 그러한 모임조차 할 생각을 하지 말자....무엇보다 수민씨가 말했던 것은 큰 깨닳음을 주었다. 시형 선임님이랑 같은 궤에 있다고 생각했었는데, 생각했던 것도 정말 똑같다는 생각을 하게 되었다. 정말 단순하게 생각하고 하지만, 내가 내 본심을 보여주었고, 친해지고자 했던 것들이 다시 생각해보면 (삼성에 가고싶다든지, 욕심이 있다든지와 같은 이야기는 해봤자 별로 득이 되지 않는다는 것을 알게 되었고, 알량하게 자존심을 지키고 있는 사람들 속에서 나는 나를 내려놓는 것이 친해지는 방법이라고 생각했는데 다시 생각해보면 꼭 그걸 그렇게 받아들일 수 있는 사람이 많지 않다는 것을 알게 되었다.) 정말 내가 좋아하는 방식대로 내가 필요한 것을 하는 것이 맞는 것 같다. 예를 들어 유산소를 해야겠다! 라고 하면 유산소는무조건 할 수 있는 plan을 짠다던가와 같은...
+2. 어제 1080 파트 나름 젊은이들끼리 술을 먹었다. 굳이 분위기를 띄운다고 내가 굳이 하지 않아도 되는 일을 만들어서 한 것을 아닌지라는 생각을 하게 되었다. 무엇보다 약속을 지키기 위해서 차를 빌려서 업무 시간에 다녀왔는데, 그건 정말 정신나간 생각이었고, 만약 그런 일이 발생했다고 하더라도 나는 전혀 아쉬운 스탠스를 취하면 안되는구나를 생각하게 되었다. 돌이켜서 생각해보면 차를 빌린 금액이랑 술 값까지 모두 생각하게 되면 10만원을 훌쩍 쓰게 된 것인데 그러한 값어치를 할만큼 건덕지가 있는 모임도 아니었거니와 도리어 툭툭 치는 사람이랑 술을 먹으면서 앞으로는 그 사람이 끼면 다시는 술을 안먹겠다고 다짐을 하게 되었다. 요즘 다시 어떠한 자리를 만들어야한다는 강박관념 때문에 자리를 만들고 참여하고 있는데, 그러한 것이 다시금 회기하여서 나를 불안하고 우울하게 만드는 것은 아닌가라는 생각을 하게 되었다. 매번 나오는 소리라든가 다른 목소리를 들으면서 위축되는 내 자신의 그러한 곳에 굳이 던질 필요조차 없다는 생각을 하게 되었고, 정말 행복하지 않으면 그러한 모임조차 할 생각을 하지 말자....무엇보다 ㅅㅜㅁ씨가 말했던 것은 큰 깨닳음을 주었다. ㅅㅎ 선임님이랑 같은 궤에 있다고 생각했었는데, 생각했던 것도 정말 똑같다는 생각을 하게 되었다. 정말 단순하게 생각하고 하지만, 내가 내 본심을 보여주었고, 친해지고자 했던 것들이 다시 생각해보면 (삼성에 가고싶다든지, 욕심이 있다든지와 같은 이야기는 해봤자 별로 득이 되지 않는다는 것을 알게 되었고, 알량하게 자존심을 지키고 있는 사람들 속에서 나는 나를 내려놓는 것이 친해지는 방법이라고 생각했는데 다시 생각해보면 꼭 그걸 그렇게 받아들일 수 있는 사람이 많지 않다는 것을 알게 되었다.) 정말 내가 좋아하는 방식대로 내가 필요한 것을 하는 것이 맞는 것 같다. 예를 들어 유산소를 해야겠다! 라고 하면 유산소는무조건 할 수 있는 plan을 짠다던가와 같은...
 
 3. 비교적 늦은 나이에 로스쿨에 입학하여서 공부를 하고 있는 사람의 영상을 보게 되었다. 요즘 이따금씩 행복감에 젖어서 지내는 내 자신과 다시 출발을 해야하는 내 사이에서 많은 갈등이 있었다. 너무 행복하고 지금 있는 것들을 잃기 싫어한다는 생각을 하였지만, 결국에 든 생각은 놓치지 않는다기보다도 욕심을 부리되, 좌절하거나 낙담하지 말아야하는 것 같은 생각을 들게 되었다. 결국 진짜 실력있는 사람들은 실력이 있게 되는 것이다. 조금 늦더라도 조금씩 천천히 걸어서 가더라도 남들보다는 말고 내가 옳다고 생각하는 길을 가게 된다면 그것 역시 좋은 것이다. 나는 어찌됐든 재원이 많이 부족한 사람으로서 하나하나 이룩하면서 다시 앞길을 나가는 것이 힘들지만, 그러한 것들이 단순히 시간 낭비가 되지 않기 위해서 많은 것들을 기록하고 기억할 것. 무언가 더 잘날 것이라는 착각, 또 그 안에서 하나도 잘나지 못한 내 모습을 보면서 확신을 만들기 위한 증거들보다 어떻게 하면 효율적으로 잘 요행을 노리고 있었던 것 같은데, 장훈아 너는 요행을 노리는 사람이 아니야. 진득하더라도 진정성있어. 상투적이고 대답을 회피하는 사람들보다 생각이 깊은 내면을 꿰뚫어 보는 네가 있어.
 
