--- a/_posts/2021-01-02-diary.md
+++ b/_posts/2021-01-02-diary.md
@@ -1,6 +1,6 @@
 ---
 title: 2022 새해맞이
-tags: reivew
+tags: review
 ---
 
 ![KakaoTalk_Photo_2022-01-03-01-42-07](https://user-images.githubusercontent.com/50545088/147882924-393ff1de-e864-48a2-a903-5e148b331b27.jpeg)
