--- a/_posts/2022-06-16-diary.md
+++ b/_posts/2022-06-16-diary.md
@@ -21,3 +21,5 @@ tags: diary
  더 잘되어야 한다는 생각
  가끔 좋은 대학교에 나온 사람들보다 안좋은 학력, 학벌임에도 불구하고 성공한 사람들의 이야기를 듣곤 한다. 오히려 희망주려는 이야기겠거니 생각했던 것과 혹은 더 극적이기 때문에 감동적인 이야기라고 생각했는데, 따지고 보면 무의식적으로 그러한 생각을 가지고 있지 않나 라는 생각을 하였다. 시골쥐 역시 대학교를 나오지 못함에도 불구하고 끊임없이 공부했던 것 같다. 그러한 모습이 하나하나 더 큰 결과를 내지 않았을까?
 
+6/29
+운동을 하고 있는데 정말 근육을 크게 키우려면 내가 고통스러울 때 한번 더 해야한다. 마찬가지로 공부도 그런 것이 아닐까? 내가 고통스러울 때 한번 더 해야 머리에 들어갈 수 있다. 그리고 무언가를 해내는 사람은 호들갑을 떨지 않는다. 안광이 지배를 철한다. 👀
