change youtube size

--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -1,5 +1,5 @@
 ---
-title: 7월 (가제)
+title: 7월 (유튜브 사이즈 변경)
 tags: review
 ---
 1. 오픽 준비 하는 중, 대학교에서 제공해주는 해커스 Clara 쌤의 강연을 다 듣고, 여우 모의고사로 테스트 하는 중, 오픽 노잼도 AL 시리즈는 다 봤고, 시간이 된다면 AH 시리즈도 다 볼 계획. 컴퓨터 활용능력을 준비하면서 느낀 것인데, 나는 남들보다 조금 더 많이 준비해야하는 사람이구나를 느끼고 있다. 인터넷에서 보면 3일만에 오픽 IH 받는 방법과 같은 것들이 올라오곤 하는데, 그렇게 공부해서는 나는 딱히 도움은 안된다는 것을 느꼈다. <bold>아니면 그 사람들은 정말 배운 것들을 적기적소에 잘 써먹고 있는지도 </bold>
