--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -2,8 +2,9 @@
 title: 7월 (유튜브 사이즈 document에 있는 방법으로 삽입 markdown으로ㅎ)
 tags: review
 ---
-1. 오픽 준비 하는 중, 대학교에서 제공해주는 해커스 Clara 쌤의 강연을 다 듣고, 여우 모의고사로 테스트 하는 중, 오픽 노잼도 AL 시리즈는 다 봤고, 시간이 된다면 AH 시리즈도 다 볼 계획. 컴퓨터 활용능력을 준비하면서 느낀 것인데, 나는 남들보다 조금 더 많이 준비해야하는 사람이구나를 느끼고 있다. 인터넷에서 보면 3일만에 오픽 IH 받는 방법과 같은 것들이 올라오곤 하는데, 그렇게 공부해서는 나는 딱히 도움은 안된다는 것을 느꼈다. <bold>아니면 그 사람들은 정말 배운 것들을 적기적소에 잘 써먹고 있는지도 </bold>
+1. 오픽 준비 하는 중, 대학교에서 제공해주는 해커스 Clara 쌤의 강연을 다 듣고, 여우 모의고사로 테스트 하는 중, 오픽 노잼도 AL 시리즈는 다 봤고, 시간이 된다면 AH 시리즈도 다 볼 계획. 컴퓨터 활용능력을 준비하면서 느낀 것인데, 나는 남들보다 조금 더 많이 준비해야하는 사람이구나를 느끼고 있다. 인터넷에서 보면 3일만에 오픽 IH 받는 방법과 같은 것들이 올라오곤 하는데, 그렇게 공부해서는 나는 딱히 도움은 안된다는 것을 느꼈다. 아니면 그 사람들은 정말 배운 것들을 적기적소에 잘 써먹고 있는지도
 
-<div>{%- include extensions/netease-cloud-music.html id='1qHZorgn1-8' -%}</div>
+<div>{%- include extensions/youtube.html id='qzMZfW3J7k' -%}</div>
+
 
 2. 예전에 약간의 우울증 때문에 아무것도 안하고, 요즘에서도 선택 하나하나가 궁극적으로 나를 갉아먹는 선택을 하고 있다고 하는데, 위와같은 생각이 부단히 필요하구나, 다른 사람들을 만나고, 다른 이야기를 하고, 나와 정반대된 사람을 만나면서도 내가 틀리지는 않았는지 계속 의심하는 것.. 그런데 그것이 가장 어려운 것 같다.
