--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -2,9 +2,26 @@
 title: 7월 (유튜브 사이즈 document에 있는 방법으로 삽입 markdown으로 id 변경)
 tags: review
 ---
+**7/1**
 1. 오픽 준비 하는 중, 대학교에서 제공해주는 해커스 Clara 쌤의 강연을 다 듣고, 여우 모의고사로 테스트 하는 중, 오픽 노잼도 AL 시리즈는 다 봤고, 시간이 된다면 AH 시리즈도 다 볼 계획. 컴퓨터 활용능력을 준비하면서 느낀 것인데, 나는 남들보다 조금 더 많이 준비해야하는 사람이구나를 느끼고 있다. 인터넷에서 보면 3일만에 오픽 IH 받는 방법과 같은 것들이 올라오곤 하는데, 그렇게 공부해서는 나는 딱히 도움은 안된다는 것을 느꼈다. 아니면 그 사람들은 정말 배운 것들을 적기적소에 잘 써먹고 있는지도
 
 <div>{%- include extensions/youtube.html id='2Xa2fPTQaoA' -%}</div>
 
-
+**7/2**
 2. 예전에 약간의 우울증 때문에 아무것도 안하고, 요즘에서도 선택 하나하나가 궁극적으로 나를 갉아먹는 선택을 하고 있다고 하는데, 위와같은 생각이 부단히 필요하구나, 다른 사람들을 만나고, 다른 이야기를 하고, 나와 정반대된 사람을 만나면서도 내가 틀리지는 않았는지 계속 의심하는 것.. 그런데 그것이 가장 어려운 것 같다.
+
+6EB9lEr2kC0
+
+uYU9oIlSIMg&t=0s
+
+Qqdcu1KboYw&t=0s
+
+**7/4**
+오늘 현대모비스 면접을 보려고 했었는데 알고보니 23:59이 아니라 7/4 11:59까지였다. 이렇게 멍청할 수가 없었다... 괜히 이것저것 많이 신경쓰고, 많이 준비해야한다는 말 때문에 내 스스로도 주말에 봐야지 했었다가 월요일로 미루면서 완벽하게 보려고 했던 것이 오히려 화를 입었던 것이다. 정해진 것이 있으면 정말 나도 모르게 빠르게 진행하려는 것이 중요하다는 것을 다시금 생각하게 되었다.... 나중에 불이익은 없겠지? 
+오늘 LGES에 다니는 친구가 SS 생관으로 간다는 말을 들었다. 남들과 다르게 취업을 빨리 한 케이스고 그것 때문에 자만하면서 지낸 것이 사실이었는데, 한 발자국씩 나가는 친구들을 보면서 너무 안일하게 지낸 것은 아닌지 라는 생각이 들었다. 
+
+
+<div>{%- include extensions/youtube.html id='0lXwMdnpoFQ' -%}</div>
+
+aespa 도깨비불의 dance practice 영상을 보게 되었다. 점점 더 aespa에 사람들이 집중하고(미국의 어느 쇼 프로그램에서 단독으로 나와서 공연하는 것을 보았기 때문에) 무언가를 보여줄 수 있는 사람들은 그것을 보여줄 수 있는 방법을 알기 때문에 다른 staff이나, 여타 다른 사람들이 도와줄 수 있다는 것을 알게 된 순간 조금 더 나에대해서 집중을 해야한다는 생각이 들었다. 결국 인생은 내 주변으로 돌아가는 것이고, 그것이 나를 인식하는 방법을 또 다른 방법으로 만들어주게 되니깐.
+호랑이들을 많이 키웠나? 괜히 소모적인 인간 관계를 많이 만들면서 스스로 이상한 곳에 에너지를 쓰고 있는건 아닌지라는 생각을 했다. 4학년때 쓸데없는 대외활동을 하면서 주변 사람들을 많이 만들고자 하였던 것이 오히려 되돌아보건데, 다른 좋은 것들을 할 수 있는 것들을 많이 놓친 것은 아닌가라는 후회가 생겼다. 그렇기 때문에 4학년때 아쉬운 선택을 많이 하였고, 소모적으로 스스로 위로받기 위해서 이상한 행동들을 많이 했던 것 같다. 지금도 똑같지 않을까 라는 생각을 하게 되었다. 지금은 다른 무언가를 위해서 나아가야할 때이다. 지금 모든 사람들을 다 만나가면서 시간을 낭비할 겨를이 없다.... 요즘은 내가 실력이 많이 부족하고, 시간도 많이 부족하다는 것을 많이 느끼니깐, 실패하게 되면 또 다시 노력하고 또 다시 노력하게 되고... 어찌됐든 회복 탄력성을 준 어머니의 응원에대해서는 항상 감사하다. 이번에 영어 성적이 똑같다고 하니깐, "뭐 어때 또 하면 되지라고 말씀해주시는" 하지만,,, _저도 때로는 천재이고 싶어요_ 
