--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -5,10 +5,8 @@ tags: diary
 **7/1**
 1. 오픽 준비 하는 중, 대학교에서 제공해주는 해커스 Clara 쌤의 강연을 다 듣고, 여우 모의고사로 테스트 하는 중, 오픽 노잼도 AL 시리즈는 다 봤고, 시간이 된다면 AH 시리즈도 다 볼 계획. 컴퓨터 활용능력을 준비하면서 느낀 것인데, 나는 남들보다 조금 더 많이 준비해야하는 사람이구나를 느끼고 있다. 인터넷에서 보면 3일만에 오픽 IH 받는 방법과 같은 것들이 올라오곤 하는데, 그렇게 공부해서는 나는 딱히 도움은 안된다는 것을 느꼈다. 아니면 그 사람들은 정말 배운 것들을 적기적소에 잘 써먹고 있는지도
 
-
 **7/2**
 <div>{%- include extensions/youtube.html id='2Xa2fPTQaoA' -%}</div>
-
 1. 예전에 약간의 우울증 때문에 아무것도 안하고, 요즘에서도 선택 하나하나가 궁극적으로 나를 갉아먹는 선택을 하고 있다고 하는데, 위와같은 생각이 부단히 필요하구나, 다른 사람들을 만나고, 다른 이야기를 하고, 나와 정반대된 사람을 만나면서도 내가 틀리지는 않았는지 계속 의심하는 것.. 그런데 그것이 가장 어려운 것 같다. <br>
 youtube id <br>
 6EB9lEr2kC0 <br>
@@ -22,7 +20,17 @@ Qqdcu1KboYw&t=0s <br>
 <div>{%- include extensions/youtube.html id='0lXwMdnpoFQ' -%}</div>
 
 - aespa 도깨비불의 dance practice 영상을 보게 되었다. 점점 더 aespa에 사람들이 집중하고(미국의 어느 쇼 프로그램에서 단독으로 나와서 공연하는 것을 보았기 때문에) 무언가를 보여줄 수 있는 사람들은 그것을 보여줄 수 있는 방법을 알기 때문에 다른 staff이나, 여타 다른 사람들이 도와줄 수 있다는 것을 알게 된 순간 조금 더 나에대해서 집중을 해야한다는 생각이 들었다. 결국 인생은 내 주변으로 돌아가는 것이고, 그것이 나를 인식하는 방법을 또 다른 방법으로 만들어주게 되니깐.
+- 위대한 사람들은 사람을 안무서워하지 않을까? aespa를 보면서 그들을 보고 있는 수많은 staff들과 중압감들을 이겨내면서 그들의 활동을 하는 것을 보면 회사 생활이나 다른 어떠한 일을 할 때에 있어서 지레 사람한테 겁을 먹고 일을 안하는 나를 보면서 **진정한 적은 외부사람들한테 동요되는 것이 아니라 하루하루 내 안에 온전한 일상으로 채울 수 있게끔 침착한 마음이고 남들보다 압도적으로 할 수 있는 무언가라는 생각을 하게 되었다.**
 - 호랑이들을 많이 키웠나? 괜히 소모적인 인간 관계를 많이 만들면서 스스로 이상한 곳에 에너지를 쓰고 있는건 아닌지라는 생각을 했다. 4학년때 쓸데없는 대외활동을 하면서 주변 사람들을 많이 만들고자 하였던 것이 오히려 되돌아보건데, 다른 좋은 것들을 할 수 있는 것들을 많이 놓친 것은 아닌가라는 후회가 생겼다. 그렇기 때문에 4학년때 아쉬운 선택을 많이 하였고, 소모적으로 스스로 위로받기 위해서 이상한 행동들을 많이 했던 것 같다. 지금도 똑같지 않을까 라는 생각을 하게 되었다. 지금은 다른 무언가를 위해서 나아가야할 때이다. 지금 모든 사람들을 다 만나가면서 시간을 낭비할 겨를이 없다.... 요즘은 내가 실력이 많이 부족하고, 시간도 많이 부족하다는 것을 많이 느끼니깐, 실패하게 되면 또 다시 노력하고 또 다시 노력하게 되고... 어찌됐든 회복 탄력성을 준 어머니의 응원에대해서는 항상 감사하다. 이번에 영어 성적이 똑같다고 하니깐, "뭐 어때 또 하면 되지라고 말씀해주시는" 하지만,,, _저도 때로는 천재이고 싶어요_ 
 
 **7/5**
-1. DisCord 음성 채팅을 연결하려고 다운받으려고 했는데 왜 나 덜리냐
+1. Discord 음성 채팅을 연결하려고 다운받으려고 했는데 왜 나 떨리냐
+2. 우울증이 심한 친구들과 이야기를 하면 말을 할 떄 나를 옥죄게 되고, 괜시리 더 조심하게 된다. 그러면서 나 또한 지나치게 검열을 하기 시작하는데 ....
+3. 타협하지 않는 것, (러닝을 뛸 때 30분동안 절대 멈추지 않는 것, 얼굴 팩이 몇 개 정도 남았고, 어느 정도 후에 사야하는지, 내 예산과 비교했을 때 무리는 없는지..) 그것이 중요하다.
+
+**7/7 반차 쓰고 OPIc 시험은 짜릿해**
+1. 사람을 무서워하지 않는 것이 중요하다는 생각을 했는데, 많이 느꼈다. 그 누구에게 어떤 것을 보여주고 싶어서, 혹은 나보다 더 대단한 사람들이 많을 것이라고 생각해서 지레 겁을 먹고, 예상 실력보다 못한 적이 많았었는데, 굳이 그럴 필요없다는 것을 느꼈다. 지나가는 사람들을 눈 마주치지도 않고, 쳐다보지도 않고 길을 걸었다면은 요즘은 뭐가 어때서라는 생각으로 지낸다.
+2. 오늘 반차를 쓰고 OPIc을 보러갔다. 다같이 점심시간에 장훈씨는 안가요? 하길래 반차쓴다고 했더니 역시나 제일 븅신같은 한 명이 에이 모른 척 해줘 라면서 이직 준비를 한다고 공공연하게 말을 하고 있는 것을 보면 정말 븅신은 변하지는 않는구나... 저번에 나에대해서 잘못 판단하길래 혼쭐을 내주었다기보다는 부끄럽게 만들어주었는데, 여전히 나를 뭐 안다는 식으로 이야기하면 참...
+3. 그렇게 와서 좀 많이 신경이 쓰였는지, 아니면 그냥 피곤해서인지, 와서 공부하다가 다시 조금 낮잠을 자고 출발~! 조금 늦을뻔 했지만 정말 가까스럽게 도착을 하였다. 일산공인시험센터에서 시험을 보았는데, 공인시험센터 감독관님이 강남에서 본 것과 다르게 정말 친절하게 하나하나 알려주셨다. "예를 들어서 다음에는 어떠한 것이 나오니깐 무엇을 누르면 된다. 그러면 타이머를 키고 시험을 시작하면 된다." 일산은 시골은 아니었지만, 그렇게 친절한 사람들을 보면 서울 라이프가 꼭 좋은 것만은 아니라는 생각이 늘 들곤 한다.
+4. 노력을 통해서 하나하나 이룩하는 사람들의 모습이 정말 대단해보인다. 요즘은 필라테스처럼 본연이 태생적으로 그렇게 태어나 어영부영 가게 열고 돈 버는 사람들보다도 (물론 노력을 통해서 이룩하는 사람들을 펌훼하는 것은 아니지만, 인터넷에 있는 글들 중에서 당연코 사설 자격증을 가지고 아무렇게나 여는 사람들이 많아진다는 심으뜸의 유튜브 결과를 보고서도 그렇고 ...), 하나하나 정말 힘든 것을 겪어가면서 성공하는 사람들을 보면 눈체 총기가 보인다. 
+<div>{%- include extensions/youtube.html id='fYQn9r9_hVc' -%}</div>
