--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -33,4 +33,23 @@ Qqdcu1KboYw&t=0s <br>
 2. 오늘 반차를 쓰고 OPIc을 보러갔다. 다같이 점심시간에 장훈씨는 안가요? 하길래 반차쓴다고 했더니 역시나 제일 븅신같은 한 명이 에이 모른 척 해줘 라면서 이직 준비를 한다고 공공연하게 말을 하고 있는 것을 보면 정말 븅신은 변하지는 않는구나... 저번에 나에대해서 잘못 판단하길래 혼쭐을 내주었다기보다는 부끄럽게 만들어주었는데, 여전히 나를 뭐 안다는 식으로 이야기하면 참...
 3. 그렇게 와서 좀 많이 신경이 쓰였는지, 아니면 그냥 피곤해서인지, 와서 공부하다가 다시 조금 낮잠을 자고 출발~! 조금 늦을뻔 했지만 정말 가까스럽게 도착을 하였다. 일산공인시험센터에서 시험을 보았는데, 공인시험센터 감독관님이 강남에서 본 것과 다르게 정말 친절하게 하나하나 알려주셨다. "예를 들어서 다음에는 어떠한 것이 나오니깐 무엇을 누르면 된다. 그러면 타이머를 키고 시험을 시작하면 된다." 일산은 시골은 아니었지만, 그렇게 친절한 사람들을 보면 서울 라이프가 꼭 좋은 것만은 아니라는 생각이 늘 들곤 한다.
 4. 노력을 통해서 하나하나 이룩하는 사람들의 모습이 정말 대단해보인다. 요즘은 필라테스처럼 본연이 태생적으로 그렇게 태어나 어영부영 가게 열고 돈 버는 사람들보다도 (물론 노력을 통해서 이룩하는 사람들을 펌훼하는 것은 아니지만, 인터넷에 있는 글들 중에서 당연코 사설 자격증을 가지고 아무렇게나 여는 사람들이 많아진다는 심으뜸의 유튜브 결과를 보고서도 그렇고 ...), 하나하나 정말 힘든 것을 겪어가면서 성공하는 사람들을 보면 눈체 총기가 보인다. 
+
 <div>{%- include extensions/youtube.html id='fYQn9r9_hVc' -%}</div>
+
+- 트랜스지방이 들어간 과자를 먹지 않기 
+- 적어도 18시간은 공복을 유지해주기 
+
+7/7
+![KakaoTalk_Photo_2022-07-11-00-19-28 007](https://user-images.githubusercontent.com/50545088/178151091-3caa8e61-8f8e-4b31-b18c-03e8f13b84ef.jpeg)
+오ㄹ은 너무 행복해서 일기를 쓰지 않으면 안된다. 오늘 가방도 오고, 레고도 오고, 룸메 ㅈㅎ랑 같이 맥주도 먹고 정말 행복!!!!!
+
+7/9
+![KakaoTalk_Photo_2022-07-11-00-19-28 005](https://user-images.githubusercontent.com/50545088/178151113-92509ba9-e6ce-4cf1-9739-533c6b6147ae.jpeg)
+![KakaoTalk_Photo_2022-07-11-00-19-28 006](https://user-images.githubusercontent.com/50545088/178151119-4ee6b28b-fcb6-4081-a7bc-1304eb8f7c3c.jpeg)
+원래 즉흥여행으로 양양이나 다른 곳을 텐트 가지고 다녀올까 하다가 부모님이랑 간 철원, 원래 주상절리길?이라는 곳을 가려고 했는데, 비가 많이 와서 돌이 떨어질 수 있어서 입장을 금지 당하였다. 원래 계획은 철원에 가서 땅굴을 보려고 했는데, 그것마저 바뀌고 막상 갔는데, 그것도 못 보고 왔다. 아부지가 철원 땅굴을 가고 싶어하는 것 같은데 다음에 기회가 된다면 같이 가도 좋을 것 같다.
+그렇게 낙담하고 나서, 일단 점심시간이 되었기 때문에 80년 철원 막국수집을 갔다. 거기서 옛날 바이브가 퍽 재미있었고, 선남선녀들 6명이서 온 것도 재밌었다. 나는 그러지 못한 경험을 하고 있다는 것을 보면서 퍽 부럽기도 하였던 것은 사실이었다. 그렇게 주변에 송대소?인가랑 무슨 다리를 가면 좋다고 들어서 거기를 갔다. 비슷한 주상절리를 볼 수 있었는데, 날씨가 정말 여간 뜨거웠다. 김밥을 싸서 출발했었는데, 김밥을 쉬지 않게 하기 위해서 들고 다니시는 아부지 어무니를 보면서 그들이 살아온 환경들이 그들을 너무 비슷하게 행동하도록 만들었다는 생각이 들었다. 그리고나서는 오후에는 누나가 집에 와서, 장뭐이도 집에 온다고 해서 다같이 가족 오랜만에 만나게 되었다. 많은 이야기를 하고, 예전에는 비슷비슷하던 사람들이라고 생각해였는데, 나가 살면서 점점 더 다른 사람들이 되고 있다는 생각도 느끼게 되었다. 나는 어떤 사람인가, 나는 어떠한 시간들을 어떻게 보내고 있는가에 관한 생각이 들었다. 둘은 의외로 돈을 쑥쑥 땡기고 있는 것을 보면서 대단하면서도, 한편으로는 이 회사에 다니면서 위축되지 않을 수는 없었던 것 같다. 또 다시 열심히 공부하고 움직여야지
+- 워드프로세스 자격증
+- 컴퓨터활용능력 1급
+- 식스시그마
+- 공정 관련 교육 듣기
+=> 나머지 7월동안 시간을 열심히 사용해보자
