--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -7,11 +7,11 @@ tags: diary
 
 **7/2**
 <div>{%- include extensions/youtube.html id='2Xa2fPTQaoA' -%}</div>
-1. 예전에 약간의 우울증 때문에 아무것도 안하고, 요즘에서도 선택 하나하나가 궁극적으로 나를 갉아먹는 선택을 하고 있다고 하는데, 위와같은 생각이 부단히 필요하구나, 다른 사람들을 만나고, 다른 이야기를 하고, 나와 정반대된 사람을 만나면서도 내가 틀리지는 않았는지 계속 의심하는 것.. 그런데 그것이 가장 어려운 것 같다. <br>
-youtube id <br>
-6EB9lEr2kC0 <br>
-uYU9oIlSIMg&t=0s <br>
-Qqdcu1KboYw&t=0s <br>
+1. 예전에 약간의 우울증 때문에 아무것도 안하고, 요즘에서도 선택 하나하나가 궁극적으로 나를 갉아먹는 선택을 하고 있다고 하는데, 위와같은 생각이 부단히 필요하구나, 다른 사람들을 만나고, 다른 이야기를 하고, 나와 정반대된 사람을 만나면서도 내가 틀리지는 않았는지 계속 의심하는 것.. 그런데 그것이 가장 어려운 것 같다.
+youtube id
+6EB9lEr2kC0
+uYU9oIlSIMg&t=0s
+Qqdcu1KboYw&t=0s
 
 **7/4**
 1. 오늘 현대모비스 면접을 보려고 했었는데 알고보니 23:59이 아니라 7/4 11:59까지였다. 이렇게 멍청할 수가 없었다... 괜히 이것저것 많이 신경쓰고, 많이 준비해야한다는 말 때문에 내 스스로도 주말에 봐야지 했었다가 월요일로 미루면서 완벽하게 보려고 했던 것이 오히려 화를 입었던 것이다. 정해진 것이 있으면 정말 나도 모르게 빠르게 진행하려는 것이 중요하다는 것을 다시금 생각하게 되었다.... 나중에 불이익은 없겠지? 
@@ -20,7 +20,8 @@ Qqdcu1KboYw&t=0s <br>
 <div>{%- include extensions/youtube.html id='0lXwMdnpoFQ' -%}</div>
 
 - aespa 도깨비불의 dance practice 영상을 보게 되었다. 점점 더 aespa에 사람들이 집중하고(미국의 어느 쇼 프로그램에서 단독으로 나와서 공연하는 것을 보았기 때문에) 무언가를 보여줄 수 있는 사람들은 그것을 보여줄 수 있는 방법을 알기 때문에 다른 staff이나, 여타 다른 사람들이 도와줄 수 있다는 것을 알게 된 순간 조금 더 나에대해서 집중을 해야한다는 생각이 들었다. 결국 인생은 내 주변으로 돌아가는 것이고, 그것이 나를 인식하는 방법을 또 다른 방법으로 만들어주게 되니깐.
-- 위대한 사람들은 사람을 안무서워하지 않을까? aespa를 보면서 그들을 보고 있는 수많은 staff들과 중압감들을 이겨내면서 그들의 활동을 하는 것을 보면 회사 생활이나 다른 어떠한 일을 할 때에 있어서 지레 사람한테 겁을 먹고 일을 안하는 나를 보면서 **진정한 적은 외부사람들한테 동요되는 것이 아니라 하루하루 내 안에 온전한 일상으로 채울 수 있게끔 침착한 마음이고 남들보다 압도적으로 할 수 있는 무언가라는 생각을 하게 되었다.**
+- 위대한 사람들은 사람을 안무서워하지 않을까? aespa를 보면서 그들을 보고 있는 수많은 staff들과 중압감들을 이겨내면서 그들의 활동을 하는 것을 보면 회사 생활이나 다른 어떠한 일을 할 때에 있어서 지레 사람한테 겁을 먹고 일을 안하는 나를 보면서
+**진정한 적은 외부사람들한테 동요되는 것이 아니라 하루하루 내 안에 온전한 일상으로 채울 수 있게끔 침착한 마음이고 남들보다 압도적으로 할 수 있는 무언가라는 생각을 하게 되었다.**
 - 호랑이들을 많이 키웠나? 괜히 소모적인 인간 관계를 많이 만들면서 스스로 이상한 곳에 에너지를 쓰고 있는건 아닌지라는 생각을 했다. 4학년때 쓸데없는 대외활동을 하면서 주변 사람들을 많이 만들고자 하였던 것이 오히려 되돌아보건데, 다른 좋은 것들을 할 수 있는 것들을 많이 놓친 것은 아닌가라는 후회가 생겼다. 그렇기 때문에 4학년때 아쉬운 선택을 많이 하였고, 소모적으로 스스로 위로받기 위해서 이상한 행동들을 많이 했던 것 같다. 지금도 똑같지 않을까 라는 생각을 하게 되었다. 지금은 다른 무언가를 위해서 나아가야할 때이다. 지금 모든 사람들을 다 만나가면서 시간을 낭비할 겨를이 없다.... 요즘은 내가 실력이 많이 부족하고, 시간도 많이 부족하다는 것을 많이 느끼니깐, 실패하게 되면 또 다시 노력하고 또 다시 노력하게 되고... 어찌됐든 회복 탄력성을 준 어머니의 응원에대해서는 항상 감사하다. 이번에 영어 성적이 똑같다고 하니깐, "뭐 어때 또 하면 되지라고 말씀해주시는" 하지만,,, _저도 때로는 천재이고 싶어요_ 
 
 **7/5**
@@ -28,7 +29,7 @@ Qqdcu1KboYw&t=0s <br>
 2. 우울증이 심한 친구들과 이야기를 하면 말을 할 떄 나를 옥죄게 되고, 괜시리 더 조심하게 된다. 그러면서 나 또한 지나치게 검열을 하기 시작하는데 ....
 3. 타협하지 않는 것, (러닝을 뛸 때 30분동안 절대 멈추지 않는 것, 얼굴 팩이 몇 개 정도 남았고, 어느 정도 후에 사야하는지, 내 예산과 비교했을 때 무리는 없는지..) 그것이 중요하다.
 
-**7/7 반차 쓰고 OPIc 시험은 짜릿해**
+**7/6 반차 쓰고 OPIc 시험은 짜릿해**
 1. 사람을 무서워하지 않는 것이 중요하다는 생각을 했는데, 많이 느꼈다. 그 누구에게 어떤 것을 보여주고 싶어서, 혹은 나보다 더 대단한 사람들이 많을 것이라고 생각해서 지레 겁을 먹고, 예상 실력보다 못한 적이 많았었는데, 굳이 그럴 필요없다는 것을 느꼈다. 지나가는 사람들을 눈 마주치지도 않고, 쳐다보지도 않고 길을 걸었다면은 요즘은 뭐가 어때서라는 생각으로 지낸다.
 2. 오늘 반차를 쓰고 OPIc을 보러갔다. 다같이 점심시간에 장훈씨는 안가요? 하길래 반차쓴다고 했더니 역시나 제일 븅신같은 한 명이 에이 모른 척 해줘 라면서 이직 준비를 한다고 공공연하게 말을 하고 있는 것을 보면 정말 븅신은 변하지는 않는구나... 저번에 나에대해서 잘못 판단하길래 혼쭐을 내주었다기보다는 부끄럽게 만들어주었는데, 여전히 나를 뭐 안다는 식으로 이야기하면 참...
 3. 그렇게 와서 좀 많이 신경이 쓰였는지, 아니면 그냥 피곤해서인지, 와서 공부하다가 다시 조금 낮잠을 자고 출발~! 조금 늦을뻔 했지만 정말 가까스럽게 도착을 하였다. 일산공인시험센터에서 시험을 보았는데, 공인시험센터 감독관님이 강남에서 본 것과 다르게 정말 친절하게 하나하나 알려주셨다. "예를 들어서 다음에는 어떠한 것이 나오니깐 무엇을 누르면 된다. 그러면 타이머를 키고 시험을 시작하면 된다." 일산은 시골은 아니었지만, 그렇게 친절한 사람들을 보면 서울 라이프가 꼭 좋은 것만은 아니라는 생각이 늘 들곤 한다.
@@ -39,13 +40,15 @@ Qqdcu1KboYw&t=0s <br>
 - 트랜스지방이 들어간 과자를 먹지 않기 
 - 적어도 18시간은 공복을 유지해주기 
 
-7/7
+**7/7 행복한 77**
 ![KakaoTalk_Photo_2022-07-11-00-19-28 007](https://user-images.githubusercontent.com/50545088/178151091-3caa8e61-8f8e-4b31-b18c-03e8f13b84ef.jpeg)
 오ㄹ은 너무 행복해서 일기를 쓰지 않으면 안된다. 오늘 가방도 오고, 레고도 오고, 룸메 ㅈㅎ랑 같이 맥주도 먹고 정말 행복!!!!!
 
-7/9
+**7/9 가족회의**
 ![KakaoTalk_Photo_2022-07-11-00-19-28 005](https://user-images.githubusercontent.com/50545088/178151113-92509ba9-e6ce-4cf1-9739-533c6b6147ae.jpeg)
+
 ![KakaoTalk_Photo_2022-07-11-00-19-28 006](https://user-images.githubusercontent.com/50545088/178151119-4ee6b28b-fcb6-4081-a7bc-1304eb8f7c3c.jpeg)
+
 원래 즉흥여행으로 양양이나 다른 곳을 텐트 가지고 다녀올까 하다가 부모님이랑 간 철원, 원래 주상절리길?이라는 곳을 가려고 했는데, 비가 많이 와서 돌이 떨어질 수 있어서 입장을 금지 당하였다. 원래 계획은 철원에 가서 땅굴을 보려고 했는데, 그것마저 바뀌고 막상 갔는데, 그것도 못 보고 왔다. 아부지가 철원 땅굴을 가고 싶어하는 것 같은데 다음에 기회가 된다면 같이 가도 좋을 것 같다.
 그렇게 낙담하고 나서, 일단 점심시간이 되었기 때문에 80년 철원 막국수집을 갔다. 거기서 옛날 바이브가 퍽 재미있었고, 선남선녀들 6명이서 온 것도 재밌었다. 나는 그러지 못한 경험을 하고 있다는 것을 보면서 퍽 부럽기도 하였던 것은 사실이었다. 그렇게 주변에 송대소?인가랑 무슨 다리를 가면 좋다고 들어서 거기를 갔다. 비슷한 주상절리를 볼 수 있었는데, 날씨가 정말 여간 뜨거웠다. 김밥을 싸서 출발했었는데, 김밥을 쉬지 않게 하기 위해서 들고 다니시는 아부지 어무니를 보면서 그들이 살아온 환경들이 그들을 너무 비슷하게 행동하도록 만들었다는 생각이 들었다. 그리고나서는 오후에는 누나가 집에 와서, 장뭐이도 집에 온다고 해서 다같이 가족 오랜만에 만나게 되었다. 많은 이야기를 하고, 예전에는 비슷비슷하던 사람들이라고 생각해였는데, 나가 살면서 점점 더 다른 사람들이 되고 있다는 생각도 느끼게 되었다. 나는 어떤 사람인가, 나는 어떠한 시간들을 어떻게 보내고 있는가에 관한 생각이 들었다. 둘은 의외로 돈을 쑥쑥 땡기고 있는 것을 보면서 대단하면서도, 한편으로는 이 회사에 다니면서 위축되지 않을 수는 없었던 것 같다. 또 다시 열심히 공부하고 움직여야지
 - 워드프로세스 자격증
