--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -7,6 +7,7 @@ tags: diary
 
 **7/2**
 <div>{%- include extensions/youtube.html id='2Xa2fPTQaoA' -%}</div>
+
 1. 예전에 약간의 우울증 때문에 아무것도 안하고, 요즘에서도 선택 하나하나가 궁극적으로 나를 갉아먹는 선택을 하고 있다고 하는데, 위와같은 생각이 부단히 필요하구나, 다른 사람들을 만나고, 다른 이야기를 하고, 나와 정반대된 사람을 만나면서도 내가 틀리지는 않았는지 계속 의심하는 것.. 그런데 그것이 가장 어려운 것 같다.
 youtube id
 6EB9lEr2kC0
@@ -21,7 +22,9 @@ Qqdcu1KboYw&t=0s
 
 - aespa 도깨비불의 dance practice 영상을 보게 되었다. 점점 더 aespa에 사람들이 집중하고(미국의 어느 쇼 프로그램에서 단독으로 나와서 공연하는 것을 보았기 때문에) 무언가를 보여줄 수 있는 사람들은 그것을 보여줄 수 있는 방법을 알기 때문에 다른 staff이나, 여타 다른 사람들이 도와줄 수 있다는 것을 알게 된 순간 조금 더 나에대해서 집중을 해야한다는 생각이 들었다. 결국 인생은 내 주변으로 돌아가는 것이고, 그것이 나를 인식하는 방법을 또 다른 방법으로 만들어주게 되니깐.
 - 위대한 사람들은 사람을 안무서워하지 않을까? aespa를 보면서 그들을 보고 있는 수많은 staff들과 중압감들을 이겨내면서 그들의 활동을 하는 것을 보면 회사 생활이나 다른 어떠한 일을 할 때에 있어서 지레 사람한테 겁을 먹고 일을 안하는 나를 보면서
+
 **진정한 적은 외부사람들한테 동요되는 것이 아니라 하루하루 내 안에 온전한 일상으로 채울 수 있게끔 침착한 마음이고 남들보다 압도적으로 할 수 있는 무언가라는 생각을 하게 되었다.**
+
 - 호랑이들을 많이 키웠나? 괜히 소모적인 인간 관계를 많이 만들면서 스스로 이상한 곳에 에너지를 쓰고 있는건 아닌지라는 생각을 했다. 4학년때 쓸데없는 대외활동을 하면서 주변 사람들을 많이 만들고자 하였던 것이 오히려 되돌아보건데, 다른 좋은 것들을 할 수 있는 것들을 많이 놓친 것은 아닌가라는 후회가 생겼다. 그렇기 때문에 4학년때 아쉬운 선택을 많이 하였고, 소모적으로 스스로 위로받기 위해서 이상한 행동들을 많이 했던 것 같다. 지금도 똑같지 않을까 라는 생각을 하게 되었다. 지금은 다른 무언가를 위해서 나아가야할 때이다. 지금 모든 사람들을 다 만나가면서 시간을 낭비할 겨를이 없다.... 요즘은 내가 실력이 많이 부족하고, 시간도 많이 부족하다는 것을 많이 느끼니깐, 실패하게 되면 또 다시 노력하고 또 다시 노력하게 되고... 어찌됐든 회복 탄력성을 준 어머니의 응원에대해서는 항상 감사하다. 이번에 영어 성적이 똑같다고 하니깐, "뭐 어때 또 하면 되지라고 말씀해주시는" 하지만,,, _저도 때로는 천재이고 싶어요_ 
 
 **7/5**
@@ -47,12 +50,16 @@ Qqdcu1KboYw&t=0s
 **7/9 가족회의**
 ![KakaoTalk_Photo_2022-07-11-00-19-28 005](https://user-images.githubusercontent.com/50545088/178151113-92509ba9-e6ce-4cf1-9739-533c6b6147ae.jpeg)
 
-![KakaoTalk_Photo_2022-07-11-00-19-28 006](https://user-images.githubusercontent.com/50545088/178151119-4ee6b28b-fcb6-4081-a7bc-1304eb8f7c3c.jpeg)
-
 원래 즉흥여행으로 양양이나 다른 곳을 텐트 가지고 다녀올까 하다가 부모님이랑 간 철원, 원래 주상절리길?이라는 곳을 가려고 했는데, 비가 많이 와서 돌이 떨어질 수 있어서 입장을 금지 당하였다. 원래 계획은 철원에 가서 땅굴을 보려고 했는데, 그것마저 바뀌고 막상 갔는데, 그것도 못 보고 왔다. 아부지가 철원 땅굴을 가고 싶어하는 것 같은데 다음에 기회가 된다면 같이 가도 좋을 것 같다.
 그렇게 낙담하고 나서, 일단 점심시간이 되었기 때문에 80년 철원 막국수집을 갔다. 거기서 옛날 바이브가 퍽 재미있었고, 선남선녀들 6명이서 온 것도 재밌었다. 나는 그러지 못한 경험을 하고 있다는 것을 보면서 퍽 부럽기도 하였던 것은 사실이었다. 그렇게 주변에 송대소?인가랑 무슨 다리를 가면 좋다고 들어서 거기를 갔다. 비슷한 주상절리를 볼 수 있었는데, 날씨가 정말 여간 뜨거웠다. 김밥을 싸서 출발했었는데, 김밥을 쉬지 않게 하기 위해서 들고 다니시는 아부지 어무니를 보면서 그들이 살아온 환경들이 그들을 너무 비슷하게 행동하도록 만들었다는 생각이 들었다. 그리고나서는 오후에는 누나가 집에 와서, 장뭐이도 집에 온다고 해서 다같이 가족 오랜만에 만나게 되었다. 많은 이야기를 하고, 예전에는 비슷비슷하던 사람들이라고 생각해였는데, 나가 살면서 점점 더 다른 사람들이 되고 있다는 생각도 느끼게 되었다. 나는 어떤 사람인가, 나는 어떠한 시간들을 어떻게 보내고 있는가에 관한 생각이 들었다. 둘은 의외로 돈을 쑥쑥 땡기고 있는 것을 보면서 대단하면서도, 한편으로는 이 회사에 다니면서 위축되지 않을 수는 없었던 것 같다. 또 다시 열심히 공부하고 움직여야지
 - 워드프로세스 자격증
 - 컴퓨터활용능력 1급
 - 식스시그마
-- 공정 관련 교육 듣기
+- 나노 소자 공정 교육 듣기
 => 나머지 7월동안 시간을 열심히 사용해보자
+
+**7/11 다시 시작**
+오늘 운동을 하는데 운동장을 돌 떄 꾸준히 도는 것이 중요하다. 30분을 뛸 때 느리게 뛰더라도 30분을 꽉 채워서 절대 걷지 않고 뛰는 것이 더 중요한 것 같다. (그럼에도 불구하고 2번인가 멈췄다ㅜㅜ)
+오키로북스의 인스타그램에서 제주 창업 허브에 관한 이야기를 하면서, 창업을 시작할 떄 있어서 어떤 것을 바로 시작하지 말고, 마케팅 책을 10권을 읽어보고 시작하라는 말이 있었다. 어떤 것을 시작할 때, 내가 Product를 만들려고 하지 않았는가에 관한 생각을 하게 되었고, 최근에 나는 결국의 내일을 하고 싶다는 생각 떄문에 이리저리 기웃기웃 거렸던 것 같은데, 무언가 시작할 떄에 있어서 철저하게 준비하고 시작함, 혹은 많은 공부를 하고나서 시작함이 필요하다는 것을 느꼈다. 요즘 도통 공부를 안하고 있어서.... 내일부터는 공정에 관해서 열심히 공부해야겠다.
+
+<div>{%- include extensions/youtube.html id='QKndz7DOATo' -%}</div>
