--- a/_posts/2022-07-03-diary.md
+++ b/_posts/2022-07-03-diary.md
@@ -63,3 +63,18 @@ Qqdcu1KboYw&t=0s
 오키로북스의 인스타그램에서 제주 창업 허브에 관한 이야기를 하면서, 창업을 시작할 떄 있어서 어떤 것을 바로 시작하지 말고, 마케팅 책을 10권을 읽어보고 시작하라는 말이 있었다. 어떤 것을 시작할 때, 내가 Product를 만들려고 하지 않았는가에 관한 생각을 하게 되었고, 최근에 나는 결국의 내일을 하고 싶다는 생각 떄문에 이리저리 기웃기웃 거렸던 것 같은데, 무언가 시작할 떄에 있어서 철저하게 준비하고 시작함, 혹은 많은 공부를 하고나서 시작함이 필요하다는 것을 느꼈다. 요즘 도통 공부를 안하고 있어서.... 내일부터는 공정에 관해서 열심히 공부해야겠다.
 
 <div>{%- include extensions/youtube.html id='QKndz7DOATo' -%}</div>
+
+7월에 하고 싶은 것들
+- 톰삭스 전시회
+- 아시아프 전시회
+- <편입생> 연극
+- <웃는남자> 뮤지컬
+
+7.13
+1. 오늘은 갑자기 PL님이 오셔서 커피 타임을 가지자길래, 무슨 일인가 싶었더니 신규 모델에 필요한 인원이 있고, 거기에 할당되어야 하는 사람으로 우리 파트 안에서 1명이 있어서 생각해두고 있다고 하였다.
+2. OPIc 잘 봤다고 생각했는데 또 IM이 나왔다.... 무엇이 문제인지 면밀하게 확인이 필요하다. 내가 내 채점을 안해서 그런가, 나는 나름 잘 보고, 잘 외웠다고 생각했는데, 별로 점수는 그렇지 않게 나왔다 ㅜㅜ OPIc 책 안사고 뻐팅겨보려고 했었는데, 책을 사야하는건가 싶기도 하다. 이제는 시간이 너무 없다 ㅜㅜ
+
+7.15
+![KakaoTalk_Photo_2022-07-16-17-41-08](https://user-images.githubusercontent.com/50545088/179347680-edf670cb-a725-4fd9-a077-2a5565717d42.jpeg)
+
+1. OPIc 점수가 생각했던 것보다 안나오고, 무엇보다 이번에 팀도 옮기게 될 지 모른다는 이야기를 듣고나서부터 부쩍 내 안에 스트레스가 많이 쌓이고 있음을 알게 되었다. 원래 토요일에 그냥 기숙사에서 쉬면서 인터넷 강의나 들으려고 했었는데, 도저히 그럴만한 분위기도 아니었거니와 무엇보다 계속 고민하는 것, 그 자체만으로도 가고 싶은 마음이 있었다는 것을 알 수 있어서 그냥 FT 써버리고 40분 일찍 퇴근을 해버렸다. 필요한 것들을 챙기고 기숙사 버스를 탔는데, 원래 이ㄱㅈ한테 같이 놀까 했었는데, 약속이 있다고 해서 취소... 사람 약속고 ㅏ관련해서는 무한 P를 보여주는 내 모습 때문에 고생하는 내 친구들이 몇몇 있지만, 그렇게 에이 오늘은 공쳤다는 생각으로 운동을 하고 있는데, 연락이 와서 늦게라도 가능하냐고 해서 ㄱㅈ랑 ㄱㅈ 친구 ㅇㅅ이랑 같이 놀러 가게 되었다. 일단 내가 취하지 않았기 때문에 소주 드링킹하고 같이 술 좀 더 먹다가, 끝내고 나왔다. 국밥이나 얼큰하게 먹으려고 했지만, 시간이 너무 늦어져서 편의점에 들어가서 라면 육개장이랑 햄버거 샀는데, ㄱㅈ친구가 초복이라면서 닭백숙을 삼 ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ 그래서 그냥 길거리 계단 같은 곳에서 육개장이랑 닭백숙 먹고, 집까지 가는 택시 잡으려고 좀 많이 걸어서 가고 있는데 깨돌이김밥에서 떡볶이랑 오뎅 싹 먹으면 하루의 피로가 날라갈 것 같다는 말 떄문에 분식집도 clear.. 진짜 너무 재밌고 행복하고 스트레스 쫙 날라갔다. 요즘 많이 걱정이 있었는데, 걱정이 정말 없어졌고, 다시 움직일 수 있는 원동력이 되어주었다. 어찌됐든 청춘을 같이 보낼 수 있는 친구가 이렇게 있고, 성격은 엄청 달라도 마음이 같다는 것에 큰 위안이 되어주었다. 이번에 많이 얻어먹었는데, 다음에 내가 친구들 택시값이라도 내주어야겠다. 이태원 놀러가도 이친구들이랑 진짜 재밌을 것 같다.
