--- a/_posts/2022-08-02-review.md
+++ b/_posts/2022-08-02-review.md
@@ -1,6 +1,6 @@
 ---
 title: 버즈라이트이어 (2022)
-tags: Diary
+tags: Review
 ---
 
 ![257ac517be30a507a0b6be3ab83658ff8e430e2c0722271ebd947d2d41f4a3a28fdf272fe2fd314ee9fcfd8ccb10cc6d7219a8ffaea66f5d91545a4faef5dc4fd14700c8873076882914a6b798cf122df3b2fbba9f6745e647df207374d5396db6d63d067cce3548c13768dbb8705d8f](https://user-images.githubusercontent.com/50545088/183289677-02297545-29ec-4f6e-93a9-a492bb373cfd.jpeg)
@@ -9,7 +9,7 @@ tags: Diary
 
 우주를 무서워하는 이지에게 삭스와 하는 말이 인상깊었다.
 
->>이지 : 만약 우주로 방향을 잘못하게 되면 어떡하지
->>삭스 : 그렇지 않게 해야지
+>이지 : 만약 우주로 방향을 잘못하게 되면 어떡하지
+>삭스 : 그렇지 않게 해야지
 
 무언가를 하기 전에 있어서 두려워하는 이지에게 삭스가 그렇지 않게 해야지라는 말은 엄청 신기했다. 나 역시도 무언가를 할 때 있어서 걱정이 앞서서 무언가를 못하는 사람이라는 내 자신이 보였다. 어린이 영화답지 않게 상대성이론이라던가 평행 우주라던가와 같은 배경 설정은 재미있었다. 버즈의 악당의 모습도 바로 볼 수 있어서 새로웠지만, 정말 그 이상 그 이하인 작품은 아니었다.
