--- a/_posts/2022-07-30-review.md
+++ b/_posts/2022-07-30-review.md
@@ -12,4 +12,4 @@ tags: Review
  - 독서 모임 이후의 HIP한 공간 체험
  - 이 안에서 나를 표햔하는 것을 연습하고, 표현하는 것을 위해서 따로 공부하는 내 모습 (이것이 가장 중요하다.)
 
- 흠 결국의 위의 세 가지 목적이 있었는데, 이것을 지켜질 수 있는 사람은 아닌 것 같다는 생각이 드는데 어찌됐든 완전하게 합불의 영역이 아닌 다음까지의 선택이 있을 수 있을 것인데, 그때 결정은 겸허하게 받아들여야겠다.
+ 흠 결국의 위의 세 가지 목적이 있었는데, 이것을 지켜질 수 있는 사람이라는 질문의 꼬리표는 달기 시작했고, 다음까지의 선택이 있을 수 있을 것인데, 그때 결정은 겸허하게 받아들여야겠다.
