--- a/_posts/2022-07-30-review.md
+++ b/_posts/2022-07-30-review.md
@@ -3,6 +3,50 @@ title: 히토 슈타이얼 - 데이터의 바다 - (2022)
 tags: Review
 ---
 
+
+![image](https://user-images.githubusercontent.com/50545088/186706509-faac049c-2441-4759-869e-c68b33585f15.jpeg)
+
+
+![image](https://user-images.githubusercontent.com/50545088/186707096-652e6f62-5c6b-46eb-b0e7-dbbf6279a573.jpeg)
+
+
+![image](https://user-images.githubusercontent.com/50545088/186707988-3ec481ff-b979-4481-85e2-0186a8a019ff.jpeg)
+
+![image](https://user-images.githubusercontent.com/50545088/186708204-63e83514-c5fa-46f5-9337-0f4c44230e4c.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-24 009](https://user-images.githubusercontent.com/50545088/186707261-48fddecd-e9f1-4de4-b3b6-de63de01de89.jpeg)
+
+
+
+![KakaoTalk_Photo_2022-08-26-00-32-12](https://user-images.githubusercontent.com/50545088/186707798-f4db5700-b694-4084-b634-cca5611b14bb.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-25 013](https://user-images.githubusercontent.com/50545088/186708292-4f80d1d2-9154-4b19-b5ec-696db6aba9b7.jpeg)
+
+![KakaoTalk_Photo_2022-08-26-00-23-25 014](https://user-images.githubusercontent.com/50545088/186708372-2bbacf43-2590-4137-819e-2594b8474d3f.jpeg)
+
+![KakaoTalk_Photo_2022-08-26-00-23-25 015](https://user-images.githubusercontent.com/50545088/186708544-5bf6a8e7-612e-4938-b887-d33218a0c25b.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-25 016](https://user-images.githubusercontent.com/50545088/186708547-f6aa1092-f1ac-48ee-99ca-bba7ab6797e5.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-25 017](https://user-images.githubusercontent.com/50545088/186708553-eeaa5f87-eef8-483f-9018-ee4423355018.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-25 018](https://user-images.githubusercontent.com/50545088/186708559-d57aa897-9b5d-49d3-8898-b97923406298.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-24 010](https://user-images.githubusercontent.com/50545088/186708714-add08044-2ee2-4e5a-a565-e7e727f3e72e.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-24 011](https://user-images.githubusercontent.com/50545088/186708733-c697156c-1b82-4f34-bfb2-2c11cadbf60b.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-00-23-24 008](https://user-images.githubusercontent.com/50545088/186708728-790d599e-e35e-4089-957b-c812c32b0d7f.jpeg)
+
+
 1. 국립현대미술관에서 진행한 디지털 에세이스트 히토 슈타이얼의 전시를 보았다. 무엇보다 신기했던 것은 지금에서야 많은 귀추를 받고 있는 발렌시아가의 참여라든지, 메타버스라든지와 같은 개념들은 이미 2년 전부터 작가는 그러한 것들을 준비하고 있음을 알 수 있었고, 이는 발란시지, 디스이즈퓨처와 같은 미술작품을 통해서 알 수 있었다. 예전에는 정말 예술가의 효용에 관해서 생각을 해보았지만, 예전에 생각했던 것 그대로 예술가가 길을 만들면 광고나 크리에이티브쪽에서는 예술가를 차용한다는 생각을 하게 되었고, 이번에 결국에 히토슈타이얼의 국립현대미술관 커미션작 "야생적 충동" 이 미래의 어떤 방향을 제시하고 있을지에 관한 생각을 하게 되었다. 야생적 충동에서는 코로나로 인하여 연극을 할 수 있는 연극가들이 결국에 밀려나서 산 위에서 연극학교를 세우게 되고, 거기 안에서 블록 체인을 대체할 수 있는 믈록치즈에대한 개념을 제시하고 이것이 또 하나의 미래의 방향성이라고 말을 하주었다. 
  또한, 생존 본능의 연장선 안에서 동물들을 크립토 메타버스를 통해서 동물 생존 결투 게임의 판을 만들게 되었고, 그들이 죽어나갈 때마다 그것을 NFT화해서 그것을 대체할 수 있을 정도로 만드는 것이라는데, 결국 나는 작가들이 미래에 관한 양음에 관한 판단은 유보한다고 생각했었지만, 영상의 중간에서 결국은 글쓴이는 이러한 방향을 지속될 것이며, 한편으로는 다른 방향을 모색하기 위해서 허슬하는 다양한 사람들이 존재하고 생겨날 것이라는 것에 관한 생각을 볼 수 있었고, 그 의미가 꽤 작위적이어서 사뭇 놀랐다.
 
