--- a/_posts/2022-06-25-review.md
+++ b/_posts/2022-06-25-review.md
@@ -1,5 +1,5 @@
 ---
-title: 코다(2021)
+title: 🫠 코다(2021)
 tags: Review
 ---
 ![98739_90914_3957](https://user-images.githubusercontent.com/50545088/176471048-8d70df45-970e-4be5-87bf-cec773cc4002.jpeg)
