--- a/_posts/2022-07-26-review.md
+++ b/_posts/2022-07-26-review.md
@@ -3,6 +3,117 @@ title: 🇺🇸 톰 삭스 - 인독트리네이션 - (2022)
 tags: Review
 ---
 
+![KakaoTalk_Photo_2022-08-26-23-30-54 001](https://user-images.githubusercontent.com/50545088/186928556-b5b75d6a-953f-4b00-adc5-991318dc3e4e.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-54 002](https://user-images.githubusercontent.com/50545088/186928585-3b720b76-61b2-4f7c-8624-77b9271f9d52.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-55 003](https://user-images.githubusercontent.com/50545088/186928593-eb2f957c-a9ae-4567-b238-556fd205ab1a.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-55 005](https://user-images.githubusercontent.com/50545088/186928599-a62e9069-701a-4427-969a-e7d24ed48c8e.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-55 006](https://user-images.githubusercontent.com/50545088/186928608-2be78ee1-afdf-4db6-96f4-d2047c1e6a9f.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-55 007](https://user-images.githubusercontent.com/50545088/186928611-5382a313-0d4b-4f32-8999-971a52e06f07.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-55 008](https://user-images.githubusercontent.com/50545088/186928615-4e8c777b-3d96-49be-8f69-875acc8cb24a.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-56 009](https://user-images.githubusercontent.com/50545088/186928619-f4c0d8d5-2501-4d26-afa4-986d797be68f.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-56 011](https://user-images.githubusercontent.com/50545088/186928623-538c588e-5e8f-4634-b571-29035e27eee7.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-57 014](https://user-images.githubusercontent.com/50545088/186928625-64f46a9f-fceb-4db1-ae61-f450bcfd6fc7.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-57 015](https://user-images.githubusercontent.com/50545088/186928627-69ea6b76-5438-4c48-92b4-009e3cf4888c.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-57 016](https://user-images.githubusercontent.com/50545088/186928630-0c907108-4ed8-4bc1-aa70-f05795c00e44.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-57 017](https://user-images.githubusercontent.com/50545088/186928640-9ea3cfdc-692a-4cad-932f-e2136cdaa26c.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-57 018](https://user-images.githubusercontent.com/50545088/186928643-310baf26-1c99-4319-962c-c77988ef57d6.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-58 019](https://user-images.githubusercontent.com/50545088/186928646-896f4bcf-e62e-47da-a5f9-82f7eec1dc23.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-58 020](https://user-images.githubusercontent.com/50545088/186928655-5681cf0b-e2df-470b-828c-c788c71aa4aa.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-58 021](https://user-images.githubusercontent.com/50545088/186928658-9a40806d-157f-4d67-9746-8716e537ce82.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-58 022](https://user-images.githubusercontent.com/50545088/186928659-0717ced2-51f8-4c79-bb79-e6b17b4060ea.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-59 024](https://user-images.githubusercontent.com/50545088/186928662-27f1c4c4-70a6-48e3-a2f5-6463d373f09d.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-59 025](https://user-images.githubusercontent.com/50545088/186928667-350fe69f-1e44-4b59-bcaa-abe1c7571e4f.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-59 026](https://user-images.githubusercontent.com/50545088/186928671-bed07cf4-079f-4516-b85f-ef90cb2baa99.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-59 027](https://user-images.githubusercontent.com/50545088/186928673-df70f08b-ac0f-4a80-834a-9f1d1dd196c2.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-30-59 028](https://user-images.githubusercontent.com/50545088/186928683-1341c207-3267-4585-9d01-eff41f3f38a0.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-00 029](https://user-images.githubusercontent.com/50545088/186928688-4d758021-f412-459c-a97e-283bee4cdfec.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-00 030](https://user-images.githubusercontent.com/50545088/186928691-fe751d36-62ef-4078-9261-3671ac011d43.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-16 002](https://user-images.githubusercontent.com/50545088/186928696-05f0d63b-854d-410b-814c-b64ac79b85c5.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-16 003](https://user-images.githubusercontent.com/50545088/186928701-b28e1adc-87cb-45d7-883f-d3c79c97bc62.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-16 004](https://user-images.githubusercontent.com/50545088/186928703-3acecb70-dd34-4c5d-b934-4c4f784d2648.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-16 005](https://user-images.githubusercontent.com/50545088/186928705-b71f94c2-711c-4723-a162-66b3f846fd14.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-17 006](https://user-images.githubusercontent.com/50545088/186928710-a5f04a3f-9e21-4607-b3fa-87fc058dc822.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-17 007](https://user-images.githubusercontent.com/50545088/186928714-9d94317a-bfe9-4c09-8f76-a113b7378829.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-17 008](https://user-images.githubusercontent.com/50545088/186928724-1e1024d4-94e4-459d-8a2c-ee28a6ceee4a.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-17 010](https://user-images.githubusercontent.com/50545088/186928726-9c271258-a18e-41d7-8579-ac539f41db9b.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-18 011](https://user-images.githubusercontent.com/50545088/186928727-74cfffb2-85b2-401d-b151-ea1a1cb7b63e.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-18 012](https://user-images.githubusercontent.com/50545088/186928731-325c7a2d-c5b7-4b91-9f9e-ca7790d35caf.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-18 014](https://user-images.githubusercontent.com/50545088/186928734-fbe5acb0-5a39-4160-a190-300db8dcc7ec.jpeg)
+
+
+![KakaoTalk_Photo_2022-08-26-23-31-18 015](https://user-images.githubusercontent.com/50545088/186928736-454d832e-d1ff-4a95-98f1-b74f9dbf1265.jpeg)
+
+
 ㅈㅎ형이 트레바리 1일 프로그램이 있다고 해서 참여한 톰 삭스 전시회, 기존에 수 천만원을 호가하는 그의 운동화 컬렉션을 익히 알고 있었기도 했고, 이번에 많은 분들이 샤라웃을 해주었기 때문에 기회가 된다면 참여하고 싶었다. 그래서 전시회를 가는 것은 준호형이랑 가면 신나기 때문에 ㅈㅎ형한테 시간이 되면 같이 가보자고 먼저 제안을 했었는데, 떡하니 이렇게 좋은 전시회에다가 기회를 먼저 제안을 해주어서 가게 되었다. 다만 비용이 한번 큐레이터의 강연을 듣는 것인데 3만 5천원이었던 것은 역시나 금액적으로 꽤 아쉬웠다.
 
 큐레이션의 강연이 유튜브에 나와있는 것이랑 너무 똑같아서 재미가 없었고, 무엇보다 모든 작품을 관람하는 것이 아니라 몇몇 작품에 관한 이야기를 하다보니깐 충분히 음미할 시간도 없었고, 모든 작품을 보는데도 시간이 부족하였기 떄문에 아쉬웠다.
