--- a/_posts/2022-07-26-review.md
+++ b/_posts/2022-07-26-review.md
@@ -3,10 +3,10 @@ title: 🇺🇸 톰 삭스 - 인독트리네이션 - (2022)
 tags: Review
 ---
 
-![KakaoTalk_Photo_2022-08-26-23-30-54 001](https://user-images.githubusercontent.com/50545088/186928556-b5b75d6a-953f-4b00-adc5-991318dc3e4e.jpeg)
+![KakaoTalk_Photo_2022-08-26-23-42-18](https://user-images.githubusercontent.com/50545088/186931008-40a460f3-1be6-45bb-b00d-910c0d0776ff.jpeg)
 
 
-![KakaoTalk_Photo_2022-08-26-23-30-54 002](https://user-images.githubusercontent.com/50545088/186928585-3b720b76-61b2-4f7c-8624-77b9271f9d52.jpeg)
+![KakaoTalk_Photo_2022-08-26-23-43-57](https://user-images.githubusercontent.com/50545088/186930970-20f5c6fd-dc3b-486c-8820-0d5e22d6a1cc.jpeg)
 
 
 ![KakaoTalk_Photo_2022-08-26-23-30-55 003](https://user-images.githubusercontent.com/50545088/186928593-eb2f957c-a9ae-4567-b238-556fd205ab1a.jpeg)
