--- a/_posts/2022-07-26-review.md
+++ b/_posts/2022-07-26-review.md
@@ -15,9 +15,6 @@ tags: Review
 ![KakaoTalk_Photo_2022-08-26-23-30-55 005](https://user-images.githubusercontent.com/50545088/186928599-a62e9069-701a-4427-969a-e7d24ed48c8e.jpeg)
 
 
-![KakaoTalk_Photo_2022-08-26-23-30-55 006](https://user-images.githubusercontent.com/50545088/186928608-2be78ee1-afdf-4db6-96f4-d2047c1e6a9f.jpeg)
-
-
 ![KakaoTalk_Photo_2022-08-26-23-30-55 007](https://user-images.githubusercontent.com/50545088/186928611-5382a313-0d4b-4f32-8999-971a52e06f07.jpeg)
 
 
@@ -78,6 +75,9 @@ tags: Review
 ![KakaoTalk_Photo_2022-08-26-23-31-16 002](https://user-images.githubusercontent.com/50545088/186928696-05f0d63b-854d-410b-814c-b64ac79b85c5.jpeg)
 
 
+
+![KakaoTalk_Photo_2022-08-26-23-30-55 006](https://user-images.githubusercontent.com/50545088/186928608-2be78ee1-afdf-4db6-96f4-d2047c1e6a9f.jpeg)
+
 ![KakaoTalk_Photo_2022-08-26-23-31-17 006](https://user-images.githubusercontent.com/50545088/186928710-a5f04a3f-9e21-4607-b3fa-87fc058dc822.jpeg)
 
 
@@ -111,7 +111,7 @@ tags: Review
 ![KakaoTalk_Photo_2022-08-26-23-31-18 015](https://user-images.githubusercontent.com/50545088/186928736-454d832e-d1ff-4a95-98f1-b74f9dbf1265.jpeg)
 
 
-ㅈㅎ형이 트레바리 1일 프로그램이 있다고 해서 참여한 톰 삭스 전시회, 기존에 수 천만원을 호가하는 그의 운동화 컬렉션을 익히 알고 있었기도 했고, 이번에 많은 분들이 샤라웃을 해주었기 때문에 기회가 된다면 참여하고 싶었다. 그래서 전시회를 가는 것은 준호형이랑 가면 신나기 때문에 ㅈㅎ형한테 시간이 되면 같이 가보자고 먼저 제안을 했었는데, 떡하니 이렇게 좋은 전시회에다가 기회를 먼저 제안을 해주어서 가게 되었다. 다만 비용이 한번 큐레이터의 강연을 듣는 것인데 3만 5천원이었던 것은 역시나 금액적으로 꽤 아쉬웠다.
+ㅈㅎ형이 트레바리 1일 프로그램이 있다고 해서 참여한 톰 삭스 전시회, 기존에 수 천만원을 호가하는 그의 운동화 컬렉션을 익히 알고 있었기도 했고, 이번에 많은 분들이 샤라웃을 해주었기 때문에 기회가 된다면 참여하고 싶었다. 그래서 전시회를 가는 것은 ㅈㅎ형이랑 가면 신나기 때문에 ㅈㅎ형한테 시간이 되면 같이 가보자고 먼저 제안을 했었는데, 떡하니 이렇게 좋은 전시회에다가 기회를 먼저 제안을 해주어서 가게 되었다. 다만 비용이 한번 큐레이터의 강연을 듣는 것인데 3만 5천원이었던 것은 역시나 금액적으로 꽤 아쉬웠다.
 
 큐레이션의 강연이 유튜브에 나와있는 것이랑 너무 똑같아서 재미가 없었고, 무엇보다 모든 작품을 관람하는 것이 아니라 몇몇 작품에 관한 이야기를 하다보니깐 충분히 음미할 시간도 없었고, 모든 작품을 보는데도 시간이 부족하였기 떄문에 아쉬웠다.
 
