--- a/_posts/2022-08-27-Diary.md
+++ b/_posts/2022-08-27-Diary.md
@@ -14,4 +14,8 @@ tags: Diary
  ### 상황3
   당시 우리집은 나의 금전적인 도움이 필요헀어서 내가 다소 허리띠를 졸라 멨어야 했었던 처지였다. 연말까지 금액을 준비해야했던터라, 얼추 남은 출장까지 4개월정도 더 다녀오고 나면 금액을 준비할 수 있었다. 그때 주변에 말은 못했지만, **직장인이 되어서도 여전히 금전적인 것에 묶여 있는 내 자신이 너무 씁쓸하게 느껴쪘다.** 그래도 이러한 굴레를 벗어나기 위해서 진짜 갑자기, 너무 갑자기 무전여행을 떠나고 싶었다. 내 상황이 대학생 때와 크게 다르지 않았음을 알게 되었고, 그렇게 그냥 가족한테, 최소한 많이 굶어도 2틀은 밖에서 지내고 무전여행을 다녀오겠다고 하면서 짐을 쌌다. 가기 전에 군대에 강원도에 지내고 있는 친구가 있었기 떄문에 일단 무작정 하루만 재워달라고 하고 출발을 했다. 혹시 무전여행 중에 물물교환을 할 수도 모르기 때문에 맥가이버 칼이랑, 1쪽을 잃어버린 에어팟도 챙겼다.
 
-## 성남 -> 원주
+---
+원래 블로그 형태로 자세하게 작성하려고 했는데, 이러한 것들도 너무 좋겠지만, 내 성격상, 이러한 것들을 일목요연하게 정리를 하지 못할 것임을 알기에 요약을 하자면, 
+
+의외로 많은 사람들이 걱정했던 안전이나 굶는 것들에 관해서는 걱정할 필요가 없었다. 많이들 도와주셨고, 나 또한 회사 생활을 하면서 아무것도 못하는 사람이라고 생각을 했었지만, 하나하나 부탁하면서 말을 하면 그것을 도와줄 수 있다는 마음을 가지게 되었다.
+언젠간 받은만큼 꼭 보담해야지 라는 생각이 들었다. 아마 그게 2023년이라는 예감이 든다.
