--- a/_posts/2022-09-26-Diary.md
+++ b/_posts/2022-09-26-Diary.md
@@ -3,10 +3,10 @@ title: 서울대 반도체공동연구소 나노소자공정 연수
 tags: Diary
 ---
 
->> 일시 : 9월 19일(월) ~ 9월 23일(금)
->> 장소 : 서울대학교 반도체 공동연구소
->> 주관 : 나노소자기술연구협의회
->> 내용 : 반도체 MOSCAP 직접 제작 및 평가
+> 일시 : 9월 19일(월) ~ 9월 23일(금)
+> 장소 : 서울대학교 반도체 공동연구소
+> 주관 : 나노소자기술연구협의회
+> 내용 : 반도체 MOSCAP 직접 제작 및 평가
 
 디스플레이 역량도 좋지만, 반도체 회사로서의 역량도 가지고 있으면 좋다고 생각되어서 반도체 나노소자 공정 연수를 들었다. 기본적으로 회로 설계 업무를 진행하면서 설계에만 집중하다보니 Hardware design에 관해서 정말 모르는 것이 많다고 생각하고 있었는데, 직접 소수 정예로 팀을 꾸려서 실습을 진행하다보니 많은 것을 배울 수 있었다. 
 
