--- a/_posts/2023-01-24-Study.md
+++ b/_posts/2023-01-24-Study.md
@@ -1,6 +1,18 @@
 ---
-title: 품질보증 관련 공부 
+title: 프로그래밍 통계
 tags: Study
 ---
 
 Pytorch의 기본적인 데이터 형태 : Tensor
+
+#### 자료의 형태
+수치형 자료 = 선형 회귀 분석 등 사용
+    => 연속형 자료 (Continuous data), 이산형 자료 (Discrete data, 셀 수 있는 관측값을 가짐, 동영상 조회수)
+범주형 자료 = 로지스틱 회귀 분석 등 사용
+    => 순위형 자료, 명목형 자료 
+
+'''
+drink_freq = drink[drink["Attend"] == 1]["Name"].value_counts()
+'''
+
+
