--- a/_posts/2023-05-13-Diary.md
+++ b/_posts/2023-05-13-Diary.md
@@ -2,6 +2,13 @@
 title: 올리 지그 중국현대미술 컬렉션전
 tags: Study
 ---
+<img width="1440" alt="스크린샷 2023-05-13 오후 11 33 04" src="https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/3ac57278-1219-43b4-9adf-81db60903a58">
+
+텍스트를 읽는 것은 다양한 사람들이랑 대화를 하는 것보다 투자하는 시간 대비 양질의 정보를 제공해줄 수 있다는 데에 장점이 있다. 그렇기 떄문에 뉴스를 읽거나 때로는 영화보다 책이 주는 울림이 커서 종종 그렇게 하는 편이다. 요즘 그도 그럴 것이 없이 다른 운동을 한다거나 다른 너무 피로해져서 텍스트를 읽는 것에 관해서 다소 게을러졌다가 부랴부랴 밀린 텍스트를 읽게 됐는데, 그것은 내가 구독하고 있는 까탈로그라는 디에디트라는 페이지에서 제공해주고 있는 뉴스레터였다. 거기서 막차를 탈 수 있는 전시를 알려주었는데, 거기에 울리 지그 중국현대미술 컬렉션전이 있었고, 그렇게 무작정 가게 되었다. (원래는 국제갤러리에서 하고 있는 이우환전을 가고 싶었는데, 100% 사전 예약제임과 동시에, 모두 예약이 차 있어서 가지 못했다. 선임님 결혼식이 2시에 있었기 떄문에 그것을 끝나고 차를 몰고 무작정 가게 되었다.)
+
+미술관에 가는 것은 어떠한 안목을 기르는 것을 넘어서 그곳의 분위기를 온전히 곱씰을 수 있다는 것에 중요점도 있는 것 같다. 어떤 사람들이 어떠한 옷차림으로 어떠한 태도로 미술관을 관람하는지는 정말 다 다르다. 그것을 보면서 다소 각박하게 움직였던 과거에 비해서 다른 사람을 통해서 에너지도 얻을 수 있고, 그러한 사람들의 에티튜드도 배울 수 있어서 좋았다.
+
+
 ![KakaoTalk_Photo_2023-05-13-23-50-04 001](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/dc8a3ac5-ff44-458c-89c1-e55ddeaae54f)
 
 @송은 문화재단
@@ -13,6 +20,9 @@ tags: Study
 ![KakaoTalk_Photo_2023-05-14-00-04-38 001](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b573bf80-7f4b-41a7-b64b-1b4f0687c1ea)
 
 ![KakaoTalk_Photo_2023-05-13-23-50-49 008](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/7f496ad0-84a7-4317-9679-4e29793a9cc2)
+![KakaoTalk_Photo_2023-05-13-23-50-48 006](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/7947cd09-b931-414f-930d-5ed038840b52)
+
+
 
 올리 지그 초상화, 약간 제프 베이조스 닮았다
 
@@ -35,20 +45,58 @@ tags: Study
 ![KakaoTalk_Photo_2023-05-13-23-50-55 015](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/c8175bac-41f7-47b6-8003-a69714fb2bcc)
 렌티큘러를 통해서 돌아다닐 때마다 다양한 그림이 보였던 작품
 
+![KakaoTalk_Photo_2023-05-13-23-50-23 009](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/3679e2b1-3525-4e75-bd5a-ec1a893efab3)
+통창에서 살고 싶다 ㅠㅠ
+
 
 ![KakaoTalk_Photo_2023-05-13-23-50-24 010](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/186a56ad-f39b-425d-9063-bdadbbd11ff5)
-
 ![KakaoTalk_Photo_2023-05-13-23-50-55 014](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b193a565-de51-4ce8-8895-a724fbf06b8b)
 
 사실 이 작품은 다른 작품들이랑 연작이고 구슬로 연결되어 있고, 동양 서양화가 연결되어 있다는 대충 그런 느낌이었는데, 이것만 이상깊어서 이것만 찍었다.
 
 3층부터는 여성 작가들로만 구성된 작품이 있었다.
 
+![KakaoTalk_Photo_2023-05-13-23-50-56 016](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/e3b7c9ed-fbc8-40c5-af2c-d72fc78a4412)
+머리카락으로 수평선의 작품을 만든 작가, 우울감 때문에 탈모가 왔다고 하는데, 우울감이 없어도 탈모가 오는 사람이 있다 흑흑
 
-텍스트를 읽는 것은 다양한 사람들이랑 대화를 하는 것보다 투자하는 시간 대비 양질의 정보를 제공해줄 수 있다는 데에 장점이 있다. 그렇기 떄문에 뉴스를 읽거나 때로는 영화보다 책이 주는 울림이 커서 종종 그렇게 하는 편이다. 요즘 그도 그럴 것이 없이 다른 운동을 한다거나 다른 너무 피로해져서 텍스트를 읽는 것에 관해서 다소 게을러졌다가 부랴부랴 밀린 텍스트를 읽게 됐는데, 그것은 내가 구독하고 있는 까탈로그라는 디에디트라는 페이지에서 제공해주고 있는 뉴스레터였다. 거기서 막차를 탈 수 있는 전시를 알려주었는데, 거기에 울리 지그 중국현대미술 컬렉션전이 있었고, 그렇게 무작정 가게 되었다. (원래는 국제갤러리에서 하고 있는 이우환전을 가고 싶었는데, 100% 사전 예약제임과 동시에, 모두 예약이 차 있어서 가지 못했다. 선임님 결혼식이 2시에 있었기 떄문에 그것을 끝나고 차를 몰고 무작정 가게 되었다.)
 
-미술관에 가는 것은 어떠한 안목을 기르는 것을 넘어서 그곳의 분위기를 온전히 곱씰을 수 있다는 것에 중요점도 있는 것 같다. 어떤 사람들이 어떠한 옷차림으로 어떠한 태도로 미술관을 관람하는지는 정말 다 다르다. 그것을 보면서 다소 각박하게 움직였던 과거에 비해서 다른 사람을 통해서 에너지도 얻을 수 있고, 그러한 사람들의 에티튜드도 배울 수 있어서 좋았다.
+![KakaoTalk_Photo_2023-05-13-23-50-57 017](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/c829e433-6b5a-4169-97d0-c10fc90ea8f0)
+진짜 황소 심장에 타투로 호랑이 얼굴을 그려두고, 그러한 호랑이 얼굴을 통해서 내 심장에 넣었다는 작가
+
+![KakaoTalk_Photo_2023-05-13-23-50-58 018](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/87e566e7-605f-4e24-9fcb-c6469bd1e3c6)
+양악한 뼈를 통해서 본인 보편적인 미의 기준을 타파하겠다는 작가
+
+![KakaoTalk_Photo_2023-05-13-23-50-59 019](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/ef440b00-51f4-4d32-bbf4-f51b8b6493a9)
+![KakaoTalk_Photo_2023-05-13-23-51-00 020](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/e03c8faa-4c4e-4e31-9f1e-9ba263e79728)
+자세히 보면 연도가 나와있는데, 이것은 유명한 사람(미켈란젤로 등등의 탄생연도가 나와있는 것이라고 한다.)
+
+![KakaoTalk_Photo_2023-05-13-23-51-01 021](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/83ca45df-93f4-40b4-9db5-6a53048d3a9a)
+![KakaoTalk_Photo_2023-05-13-23-50-19 006](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/36e453dd-045b-4965-8f09-1879c047f89e)
+
+여기 나무 그림 맛집이다. 아래에 보면 한자가 열매처럼 열린 것을 알 수 있다.
+
+
+![KakaoTalk_Photo_2023-05-13-23-51-02 022](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/48559df5-5149-48ae-a9ae-0505d84a9217)
+나무를 지나치게 억압하는 모습을 통해서 중국정부 비판
+
+![KakaoTalk_Photo_2023-05-13-23-51-02 023](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/73bb730b-58a2-4603-8c6a-855757bbb8dd)
+![KakaoTalk_Photo_2023-05-13-23-51-03 024](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/ff5eb081-ed5c-4359-9a53-1d581e0b228a)
+Pencil on paper, 연필을 여러 번 겹쳐서 계속 그림으로써 저렇게 검정색을 만들었다고 하는데 노고에 박수를
+
+![KakaoTalk_Photo_2023-05-13-23-51-04 025](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/9d347263-8fed-4d33-810d-1f7362cb6542)
+
+목련, 가까이서 보면 단순한 그림인데 멀리서 보면 진짜 사진같았다.
+
+![KakaoTalk_Photo_2023-05-13-23-51-05 026](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/f51c2548-7150-4527-b0e7-714401fa038b)
+기억안남, 열심히 설명해주셨는데, 진짜 대충 전시를 들었나...
+
+![KakaoTalk_Photo_2023-05-13-23-51-05 027](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/2067cb92-4100-4b92-a9c7-c36ca41681c9)
+kill kill, 대나무의 영속적인 성격과 함께 빨간색의 잎을 그려넣음으로써 생명의 상승과 하강을 표현
+
+![KakaoTalk_Photo_2023-05-13-23-51-06 028](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b61832c3-0c01-4a6c-a851-2ce033bd7254)
+맨마지막에 본 것, 이것도 열심히 들었는데 무슨 내용인지 기억이 안난다... 미우라치오 카텔란 전시가 그냥 생각났는데, 빨리 가보고 싶다.
+
 
 무엇보다 거기에 미술 회화에 진심인 사람이 있어서 말을 걸고 싶었지만, 소심남이어서 말은커녕 그러한 사람들의 에티튜드만 보고, 전시에는 오롯이 집중을 하지 못한 것은 아닌가라는 생각이 들었다.
 
-<img width="1440" alt="스크린샷 2023-05-13 오후 11 33 04" src="https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/3ac57278-1219-43b4-9adf-81db60903a58">
+
